--- a/yagam/index.html
+++ b/yagam/index.html
@@ -207,7 +207,7 @@
       <a href="#" id="book-now-button" class="button" " data-tooltip="Booking Open on 18th June" >BOOK Now </a>
     </div>
     <div class="banner-image">
-      <img src="./images/yaga.JPG" alt="Nava Durga Yagam Banner">
+      <img src="images/Yaga.jpg" alt="Nava Durga Yagam Banner">
     </div>
   </div>
   
