few changes like menationed
Yaga-small
added purpose
discription of improved changed

--- a/yagam/index.html
+++ b/yagam/index.html
@@ -193,7 +193,7 @@
   <div class="navbar">
     <a href="#">Home</a>
     <a href="assets/brochure.pdf">Yagam Broucher</a>
-   
+   <a href="#">Yagam Purpose</a>
   </div>
   <div class="banner-container">
     <div class="banner-text">
@@ -207,7 +207,7 @@
       <a href="#" id="book-now-button" class="button" " data-tooltip="Booking Open on 18th June" >BOOK Now </a>
     </div>
     <div class="banner-image">
-      <img src="images/Yaga.jpg" alt="Nava Durga Yagam Banner">
+      <img src="images/Yaga-small.jpg" alt="Nava Durga Yagam Banner">
     </div>
   </div>
   
@@ -231,7 +231,7 @@
     <div class="card">
       <!-- Add your card content here -->
       <h2>Improve Divine Power</h2>
-      <p>Participate in Ekatma Sahasra Sahasraarchana among with 1007 ladies who represents the ultimate form of Goddess Durga Devi</p>
+      <p>Participate in Ekatma Sahasra Sahasraarchana at the conclusion of Yagam among with 1007 ladies who represents the ultimate form of Goddess Durga Devi</p>
       <a href="https://form.jotform.com/pranavamorg/shahasrarchana-registration" class="button">Enroll Now</a>
     </div>
 	<!-- Add more cards for other registration types -->
