assets/purpose added

--- a/yagam/index.html
+++ b/yagam/index.html
@@ -193,7 +193,7 @@
   <div class="navbar">
     <a href="#">Home</a>
     <a href="assets/brochure.pdf">Yagam Broucher</a>
-   <a href="#">Yagam Purpose</a>
+   <a href="assets/purpose.pdf">Yagam Purpose</a>
   </div>
   <div class="banner-container">
     <div class="banner-text">
