--- a/yagam/index.html
+++ b/yagam/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Nava Durga Yagam</title>
+	<link rel="icon" type="image/png" href="images/logo.jpg">
+
   <style>
     /* Add your CSS styles here */
     /* Example styles for the banner, cards, navigation bar, and footer */
