--- a/yagam/index.html
+++ b/yagam/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Nava Durga Yagam</title>
-	<link rel="icon" type="image/png" href="images/logo.jpg">
+	<link rel="icon" type="image/png" href="images/logo-t.png">
 
   <style>
     /* Add your CSS styles here */
